--- a/_posts/2020-06-22-outsight.markdown
+++ b/_posts/2020-06-22-outsight.markdown
@@ -13,7 +13,7 @@ tags:
 
 <br>
 
-<iframe src="https://player.vimeo.com/video/431520698" width="640" height="640" frameborder="0" webkitallowfullscreen mozallowfullscreen allowfullscreen></iframe>
+<iframe src="https://player.vimeo.com/video/431520698" width="640" frameborder="0" webkitallowfullscreen mozallowfullscreen allowfullscreen></iframe>
 
 <br>
 
