--- a/_posts/2020-04-29-phygital.markdown
+++ b/_posts/2020-04-29-phygital.markdown
@@ -6,9 +6,8 @@ description:
 image: /assets/images/phygital/phygital.jpg
 author:
 tags:
-  - Experimental
-  - Interactive
   - Design Research
+  - Data-driven
 ---
 <h6> Some digital drawings triggered by the movement of sensors. </h6>
 
